cambios en el experimento 1

--- a/practica1_final.ipynb
+++ b/practica1_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from sklearn.model_selection import ParameterGrid\n",
+    "import json"
    ]
   },
   {
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,27 +108,27 @@
     "\n",
     "# Estandarizar los datos\n",
     "scaler = StandardScaler()\n",
-    "X__train_transformed = scaler.fit_transform(X_train)\n",
-    "X_test_transformed = scaler.transform(X_test)"
+    "X_train_transformed = scaler.fit_transform(X_train_loaded)\n",
+    "X_test_transformed = scaler.transform(X_test_loaded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3139/3139 [02:23<00:00, 21.90it/s]"
+      "100%|██████████| 3139/3139 [02:07<00:00, 24.66it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.2159923542529468\n"
+      "Test Accuracy: 0.21885950939789742\n"
      ]
     },
     {
@@ -142,14 +144,14 @@
     "clf = SVC(kernel='linear')\n",
     "\n",
     "# Train the classifier on the training data\n",
-    "clf.fit(X_train_loaded, y_train_loaded)\n",
+    "clf.fit(X_train_transformed, y_train_loaded)\n",
     "\n",
     "# Hacer predicciones en los datos de prueba\n",
     "y_pred = []\n",
     "\n",
     "# Utilizar tqdm para mostrar una barra de progreso\n",
-    "for i in tqdm(range(len(X_test_loaded))):\n",
-    "    pred = clf.predict(X_test_loaded[i].reshape(1, -1))\n",
+    "for i in tqdm(range(len(X_test_transformed))):\n",
+    "    pred = clf.predict(X_test_transformed[i].reshape(1, -1))\n",
     "    y_pred.append(pred[0])\n",
     "\n",
     "# Evaluar el modelo\n",
@@ -169,11 +171,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters: {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
    "source": [
-    "## AQUÍ GRID SEARCH SENCILLITO CON LAS MATRICES DE PIXELES DE MEMORIA"
+    "# Define the parameter grid for grid search\n",
+    "param_grid = {\n",
+    "    'C': [1, 10, 100],  # Different values of the regularization parameter C\n",
+    "    'kernel': ['linear', 'rbf'],  # Different kernel functions to try\n",
+    "    'gamma': [0.0001, 0.001, 0.01, 0.1],\n",
+    "}\n",
+    "\n",
+    "# Create an SVM classifier\n",
+    "svm = SVC()\n",
+    "\n",
+    "# Create an instance of GridSearchCV\n",
+    "grid_search = GridSearchCV(svm, param_grid, cv=5, n_jobs=-1)\n",
+    "\n",
+    "# Fit the model\n",
+    "grid_search.fit(X_train_transformed, y_train_loaded)\n",
+    "\n",
+    "# Get the best hyperparameters\n",
+    "best_params = grid_search.best_params_\n",
+    "print(\"Best Hyperparameters:\", best_params)\n",
+    "\n",
+    "# Save the best hyperparameters in a dictionary\n",
+    "best_hyperparameters = {\n",
+    "    'C': best_params['C'],\n",
+    "    'kernel': best_params['kernel'],\n",
+    "    'gamma': best_params['gamma']\n",
+    "}\n",
+    "\n",
+    "# Save the dictionary to a file (you can use any serialization method)\n",
+    "with open('best_hyperparameters.json', 'w') as f:\n",
+    "    json.dump(best_hyperparameters, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3139/3139 [03:14<00:00, 16.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.31379420197515134\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the hyperparameters from the file\n",
+    "with open('best_hyperparameters.json', 'r') as f:\n",
+    "    loaded_hyperparameters = json.load(f)\n",
+    "\n",
+    "# Create a new SVM model with the loaded hyperparameters\n",
+    "svm_best_pixel = SVC(**loaded_hyperparameters)\n",
+    "\n",
+    "# Train the new model\n",
+    "svm_best_pixel.fit(X_train_transformed, y_train_loaded)\n",
+    "\n",
+    "# Hacer predicciones en los datos de prueba\n",
+    "y_pred = []\n",
+    "\n",
+    "# Utilizar tqdm para mostrar una barra de progreso\n",
+    "for i in tqdm(range(len(X_test_transformed))):\n",
+    "    pred = svm_best_pixel.predict(X_test_transformed[i].reshape(1, -1))\n",
+    "    y_pred.append(pred[0])\n",
+    "\n",
+    "# Evaluar el modelo\n",
+    "accuracy = accuracy_score(y_test_loaded, y_pred)\n",
+    "\n",
+    "print(\"Test Accuracy:\", accuracy)"
    ]
   },
   {
@@ -197,9 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 24576000 into shape (1500,64,64,1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Usuario\\Desktop\\VSCode\\Aprenentatge Automàtic\\Practica1\\practica1_final.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m datagen \u001b[39m=\u001b[39m ImageDataGenerator(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     rotation_range\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,      \u001b[39m# Rango de rotación en grados\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     width_shift_range\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m,  \u001b[39m# Desplazamiento horizontal\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     fill_mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mnearest\u001b[39m\u001b[39m'\u001b[39m     \u001b[39m# Estrategia de llenado para transformaciones\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# Ajustar el generador en los datos de entrenamiento\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m datagen\u001b[39m.\u001b[39mfit(X_train_transformed\u001b[39m.\u001b[39;49mreshape(X_train_transformed\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m], desired_size[\u001b[39m0\u001b[39;49m], desired_size[\u001b[39m1\u001b[39;49m], \u001b[39m1\u001b[39;49m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Generar imágenes aumentadas\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Usuario/Desktop/VSCode/Aprenentatge%20Autom%C3%A0tic/Practica1/practica1_final.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m augmented_images \u001b[39m=\u001b[39m []\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 24576000 into shape (1500,64,64,1)"
+     ]
+    }
+   ],
    "source": [
     "# Configurar el generador de imágenes para la data augmentation\n",
     "datagen = ImageDataGenerator(\n",
@@ -329,49 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "**TRAIN TERMINADO**\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "***************************CARPETA TERMINADA***********************************\n",
-      "**TEST TERMINADO**\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define constants\n",
     " \n",
