--- a/proves.ipynb
+++ b/proves.ipynb
@@ -161,6 +161,74 @@
     "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
     "print(\"Test Accuracy:\", test_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 100 candidates, totalling 500 fits\n",
+      "Best Hyperparameters: {'C': 0.1, 'gamma': 0.1, 'kernel': 'poly'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Grid search completed!'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.datasets import load_iris\n",
+    "from IPython.display import display\n",
+    "import json  # Don't forget this line\n",
+    "\n",
+    "# Load Iris dataset for demonstration\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "# Define the parameter grid for grid search\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],\n",
+    "    'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "    'gamma': [0.0001, 0.001, 0.01, 0.1, 1],\n",
+    "}\n",
+    "\n",
+    "# Create an SVM classifier\n",
+    "svm = SVC()\n",
+    "\n",
+    "# Perform grid search with cross-validation\n",
+    "grid_search = GridSearchCV(svm, param_grid, cv=5, n_jobs=-1, verbose=2)\n",
+    "grid_search.fit(X, y)\n",
+    "\n",
+    "# Get the best hyperparameters\n",
+    "best_params = grid_search.best_params_\n",
+    "print(\"Best Hyperparameters:\", best_params)\n",
+    "\n",
+    "# Display a message indicating the completion of the grid search\n",
+    "display(\"Grid search completed!\")\n",
+    "\n",
+    "# Save the best hyperparameters in a dictionary\n",
+    "best_hyperparameters = {\n",
+    "    'C': best_params['C'],\n",
+    "    'kernel': best_params['kernel'],\n",
+    "    'gamma': best_params['gamma']\n",
+    "}\n",
+    "\n",
+    "# Save the dictionary to a file (you can use any serialization method)\n",
+    "with open('best_hyperparameters.json', 'w') as f:\n",
+    "    json.dump(best_hyperparameters, f)"
+   ]
   }
  ],
  "metadata": {
@@ -179,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
